--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ install:
   - curl http://tarantool.org/dist/public.key | sudo apt-key add -
   - echo "deb http://tarantool.org/dist/master/ubuntu/ `lsb_release -c -s` main" | sudo tee -a /etc/apt/sources.list.d/tarantool.list
   - sudo apt-get update > /dev/null
-  - sudo apt-get -q install tarantool
+  - sudo apt-get -q install tarantool tarantool-dev
 
 script:
   - mkdir ./build && cd ./build && cmake .. -DCMAKE_BUILD_TYPE=RelWithDebugInfo
