--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,5 @@ install:
   - sudo apt-get -q install tarantool tarantool-dev
 
 script:
-  - mkdir ./build && cd ./build && cmake .. -DCMAKE_BUILD_TYPE=RelWithDebugInfo
-  - prove ./test/modulekit.test.lua
+  - mkdir ./build && cd ./build && cmake .. -DCMAKE_BUILD_TYPE=RelWithDebugInfo; cd ..
+  - prove -v ./test/modulekit.test.lua
