--- a/debian/control
+++ b/debian/control
@@ -4,8 +4,9 @@ Section: database
 Maintainer: Roman Tsisyk <roman@tarantool.org>
 #Build-Depends: debhelper (>= 9), cdbs, dpkg-dev (>= 1.16.1~)
 # CMake is only needed for Lua/C and C modules
-Build-Depends: debhelper (>= 9), cdbs, cmake (>= 2.8), dpkg-dev (>= 1.16.1~)
-Standards-Version: 3.9.5
+Build-Depends: debhelper (>= 9), cdbs, cmake (>= 2.8), dpkg-dev (>= 1.16.1~),
+               tarantool (>= 1.6.8.0)
+Standards-Version: 3.9.6
 Homepage: https://github.com/tarantool/modulekit-lua
 Vcs-Git: git://github.com/tarantool/modulekit-lua.git
 Vcs-Browser: https://github.com/tarantool/modulekit-lua
