--- a/debian/control
+++ b/debian/control
@@ -6,7 +6,9 @@ Maintainer: Roman Tsisyk <roman@tarantool.org>
 Build-Depends: debhelper (>= 9), cdbs,
                cmake (>= 2.8),
                tarantool-dev (>= 1.6.8.0),
-               libmsgpuck-dev (>= 1.0.0)
+               libmsgpuck-dev (>= 1.0.0),
+# For /usr/bin/prove
+               perl (>= 5.10.0)
 Standards-Version: 3.9.6
 Homepage: https://github.com/tarantool/modulekit
 Vcs-Git: git://github.com/tarantool/modulekit.git
