--- a/debian/rules
+++ b/debian/rules
@@ -1,9 +1,9 @@
 #!/usr/bin/make -f
 
 DEB_CMAKE_EXTRA_FLAGS := -DCMAKE_BUILD_TYPE=RelWithDebInfo
+DEB_CMAKE_EXTRA_FLAGS := -DCMAKE_INSTALL_LIBDIR=lib/$(DEB_HOST_MULTIARCH) \
+                         -DCMAKE_BUILD_TYPE=RelWithDebInfo
 DEB_MAKE_CHECK_TARGET := check
-DEB_INSTALL_DOCS_ALL := -XAUTHORS
 
 include /usr/share/cdbs/1/rules/debhelper.mk
-# CMake is only needed for Lua/C and C modules
 include /usr/share/cdbs/1/class/cmake.mk
