--- a/debian/rules
+++ b/debian/rules
@@ -1,9 +1,7 @@
 #!/usr/bin/make -f
 
-DEB_CMAKE_EXTRA_FLAGS := -DCMAKE_BUILD_TYPE=RelWithDebInfo
-DEB_CMAKE_EXTRA_FLAGS := -DCMAKE_INSTALL_LIBDIR=lib/$(DEB_HOST_MULTIARCH) \
-                         -DCMAKE_BUILD_TYPE=RelWithDebInfo
-DEB_MAKE_CHECK_TARGET := check
+%:
+	dh $@
 
-include /usr/share/cdbs/1/rules/debhelper.mk
-include /usr/share/cdbs/1/class/cmake.mk
+override_dh_auto_test:
+	prove -v ./test/luakit.test.lua
