--- a/.travis.yml
+++ b/.travis.yml
@@ -57,7 +57,7 @@ deploy:
     repository: "1_6"
     token: ${PACKAGECLOUD_TOKEN}
     dist: ${OS}/${DIST}
-    package_glob: build/*.{deb,rpm}
+    package_glob: build/*.{deb,rpm,dsc}
     skip_cleanup: true
     on:
       branch: master
@@ -67,7 +67,7 @@ deploy:
     repository: "1_7"
     token: ${PACKAGECLOUD_TOKEN}
     dist: ${OS}/${DIST}
-    package_glob: build/*.{deb,rpm}
+    package_glob: build/*.{deb,rpm,dsc}
     skip_cleanup: true
     on:
       branch: master
